[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["uni"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
numpy = "^1.18.0"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
lxml = "^4.5.0"
requests-html = "^0.10.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
